syntax = "proto3";

package einride.bigquery.example.v1;

message ExampleEnum {
  Enum enum_value = 1;

  enum Enum {
    ENUM_UNSPECIFIED = 0;
    ENUM_VALUE1 = 1;
    ENUM_VALUE2 = 2;
  }
}
