syntax = "proto3";

package einride.bigquery.example.v1;

import "google/protobuf/wrappers.proto";

message ExampleWrappers {
  google.protobuf.FloatValue float_value = 1;
  google.protobuf.DoubleValue double_value = 2;
  google.protobuf.StringValue string_value = 3;
  google.protobuf.BytesValue bytes_value = 4;
  google.protobuf.Int32Value int32_value = 5;
  google.protobuf.Int64Value int64_value = 6;
  google.protobuf.UInt32Value uint32_value = 7;
  google.protobuf.UInt64Value uint64_value = 8;
  google.protobuf.BoolValue bool_value = 9;
}
